Fix scrollbar covers menu item with long text

--- a/src/webui/www/public/css/style.css
+++ b/src/webui/www/public/css/style.css
@@ -177,7 +177,7 @@ a.propButton img {
 .contextMenu li { margin:0; padding:0;}
 .contextMenu li a {
     display: block;
-    padding: 5px 14px 5px 5px;
+    padding: 5px 20px 5px 5px;
     font-size: 12px;
     text-decoration: none;
     font-family: tahoma,arial,sans-serif;
